modified packag-lock.json and package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-particles-js": "^2.7.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "4.0.3",
     "react-tilt": "^0.1.4",
     "tachyons": "^4.11.1"
   },
@@ -34,5 +34,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sridhar11-dev/Face-recogniton-.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sridhar11-dev/Face-recogniton-/issues"
+  },
+  "homepage": "/"
 }
